Fixed intro animation on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -203,4 +203,7 @@ footer span {
   .card img {
     min-width: 10rem;
   }
+  #imMark {
+    font-size: 4rem;
+  }
 }
